[package]
name = "tomb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["src-tauri"]

[dependencies]
markdown = "0.3"
js-sys = "0.3"
futures-lite = "1.12"
serde = { version = "1.0", features = ["derive"] }
yew = "0.19"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
